feat(campaign): Add os route
